# secondbrain-voice-gateway

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
configs/: docker_services.yml  home_assistant_aliases.yml  troubleshooting_knowledge.yml
docker/: Dockerfile
docs/: alexa-custom-skill.md  architecture.md  threat-model.md  unraid.md
examples/: alexa_interaction_model.json
examples/unraid/: docker-socket-proxy.xml  secondbrain-voice-gateway.xml
oauth-server/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
oauth-server/db/: init.sql
oauth-server/scripts/: create-user.js
oauth-server/src/: app.js  config.js  db.js  server.js
oauth-server/src/middleware/: requireBearerToken.js  requireHttps.js
oauth-server/src/services/: oauthService.js  userService.js
oauth-server/src/utils/: html.js  oauth.js
oauth-server/src/views/: login.html
src/gateway/: __init__.py  config.py  main.py
src/gateway/adapters/: __init__.py  docker.py  home_assistant.py  secondbrain.py
src/gateway/alexa/: __init__.py  models.py  security.py
src/gateway/api/: __init__.py  routes.py
src/gateway/models/: __init__.py  domain.py
src/gateway/routing/: __init__.py  classifier.py
src/gateway/security/: __init__.py  (+1 more)
tests/: conftest.py  test_ai_helper.py  test_alexa_api.py  test_alexa_security.py  test_config.py  test_docker_adapter.py  test_error_handling.py  test_home_assistant_adapter.py  test_orchestrator.py  test_response_composer.py  test_routing.py  test_secondbrain_adapter.py
(+10 files in other folders)
